Upgrade to Java 17 using OpenRewrite